<resources>
    <string name="label_app_name">Sea Connect</string>
    <string name="label_ok">Ok</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_lunch_activity">Lunch</string>
    <string name="label_share_lunch_activity">Share Lunch</string>
    <string name="error_network_connection">Network Connection Error</string>
    <string name="label_welcome_to_app">Welcome to\nSea Connect</string>
    <string name="label_login_description">Connecting the dots</string>
    <string name="label_login_with_google">Login with Google</string>
    <string name="label_submit">Submit</string>
    <string name="label_logout">Logout</string>
    <string name="label_sea_lunch">Sea Lunch</string>
    <string name="label_your_food">Your food</string>
    <string name="label_share_food">Share food</string>
    <string name="label_sea_challenges">Sea Challenges</string>
    <string name="label_sea_events">Sea Events</string>
    <string name="label_sea_setting">Settings</string>
    <string name="label_join">Join</string>
    <string name="label_joined">Joined</string>
    <string name="label_time">Time</string>
    <string name="label_hosted_by">Hosted By</string>
    <string name="label_location">Location</string>
    <string name="label_attendances">Attendances(%1$d)</string>
    <string name="label_comments">Comments(%1$d)</string>
    <string name="label_say_something">Say something</string>
    <string name="label_description">Description</string>
    <string name="label_send">Send</string>
</resources>
